Closed Bug 286438 Opened 21 years ago Closed 21 years ago

"Remove All" (cookies or site exceptions) should only remove visible content

Categories

(Camino Graveyard :: Preferences, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.0

People

(Reporter: bmo, Assigned: mikepinkerton)

References

Details

(Keywords: dataloss)

Attachments

(2 files)

After executing a search on your cookies or site exception list (in Preferences > Privacy), the behavior of "Remove All" is somewhat counter-intuitive. (Henceforth, my comments discuss the "Show Cookies" sheet, but also apply to the "Edit Exceptions List..." sheet.) Steps to Reproduce: 0. Backup ~/Library/Application Support/Camino/cookies.txt 1. Open Preferences… > Privacy > Show Cookies… 2. Search for a given site, e.g., cnn 3. Click "Remove All" and its subsequent confirmation dialog I expected Camino to remove only the cookies displayed in the search; instead, it removed all of my cookies. Although that behavior is relatively logical, it's also a bit deceptive, because it's not clear what "All" means. Thus, if a search bas been executed, I propose the following behavior after confirmation: 1. Remove all cookies matching the search criterion (i.e., all those displayed) 2. Clear the search field and show all available cookies This achieves the goal of removing the displayed cookies and remains clear that Camino did not delete all of your cookies.
I agree. Not sure how hard this is to do, but seems like something for post-1.0.
Target Milestone: --- → Camino1.1
This UI is really rough... a simple user error that should be avoidable causing the dataloss. Any chance something could be done for 1.0 instead of 1.1? (i know there probably isn't time for 0.9 given no patch, so I wont bother nominating.. as well as there being other issues with the UI here that should probably be fixed at the same time) Maybe something as simple* as disabling the remove all button when a filter is being applied - at least as a stopgap measure * i use that without knowing the code, or if there are any hooks there between the two ui elements or not that could be used
agreed, this is confusing and sorta bad. pulling into 1.0.
Target Milestone: Camino1.1 → Camino1.0
Olivier implemented the searching; I don't know if this is something he can fix, too?
I disabled the button as i don't know what the behaviour of the button should be. I don't think it should remove everything as it used to, but i don't think it should remove the item that are matching the search string.
Attachment #188810 - Flags: review?
FWIW, DeerPark disables their "remove all" button when there is a search string, so we're consistent. Can someone give this patch a look? It fixes a piece of ambiguous UI that causes dataloss, so it would be good to get it in 0.9 if possible.
Summary: "Remove All" (cookies or site exceptions) should only remove visible content → [patch] "Remove All" (cookies or site exceptions) should only remove visible content
landed, we now disable the "remove all" buttons to avoid confusion.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
it seems like only the patch was landed but not the nib file so the latest nightly does not work in this respect. The remove all buttons are not disabled.
(In reply to comment #9) > it seems like only the patch was landed but not the nib file so the latest > nightly does not work in this respect. The remove all buttons are not disabled. Nibs looks like they were landed. The latest nightly hasn't been built yet. Wait for the nightly from 8/1 and try that.
In the 8-1 nightly, I'm seeing some *really wierd* behavior. Once, the "remove all" button was always greyed out in "Show Cookies...", so it was impossible to remove all cookies. This worked in "Edit Exceptions..." though (and worked both places prior to this patch landing). I restarted, that worked, but the next time I opened those sheets, "Remove All" was greyed out in *both* Cookies and Exceptions (with no search term entered). Some further playing around leads me to believe that the "Remove All" being disabled, even on fresh opening of the sheet, has something to do with having previously performed a search but not pressing the X button to clear the search before closing the sheet. Also, on a couple of occasions, when performing a search in Cookies, entering a character in the search field disables the "Remove" button and one has to click on a cookie in order to re-enable it; in Exceptions, this is not necessary ("Remove" was always enabled). This is inconsistent. The behavior in Cookies seems annoying, but for UI and behavior consistency, it should probably be the standard behavior and Exceptions should be updated to match. Reopening this bug to get these inconsistent and very confusing flaws fixed.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Summary: [patch] "Remove All" (cookies or site exceptions) should only remove visible content → "Remove All" (cookies or site exceptions) should only remove visible content
(In reply to comment #11) > In the 8-1 nightly, I'm seeing some *really wierd* behavior. > [...] > Some further playing around leads me to believe that the "Remove All" being > disabled, even on fresh opening of the sheet, has something to do with having > previously performed a search but not pressing the X button to clear the search > before closing the sheet. That is what happens, yeah.
Refixed. I also made it keep a selection after deleting cookies/sites.
Status: REOPENED → RESOLVED
Closed: 21 years ago → 21 years ago
Resolution: --- → FIXED
The Exceptions sheet still has the "Remove" button active when there is no selection (i.e., when performing a search but not yet having clicked on any results). Not sure how big of a deal this is, but the "Show Cookies" sheet gets it correct.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
smokey, that's a separate issue. let's avoid zombieing this bug for anything wrong with this window. please file a new bug on the remove button state. thanks!
Status: REOPENED → RESOLVED
Closed: 21 years ago → 21 years ago
Resolution: --- → FIXED
Comment on attachment 188810 [details] [diff] [review] disable the remove all buttons when a search string is entered Clearing obsolete requests on a fixed bug; apologies for bugspam.
Attachment #188810 - Flags: review?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: