disable "remove all" button in cookies and permissions sheet when the user has typed in a filter to avoid confusion as to what "all" gets removed (bug 286438)