camino/PreferencePanes/Privacy/PrivacyPane.h
@@ -71,11 +71,13 @@ class nsICookie;
   IBOutlet SearchTextField*   mPermissionFilterField;
   nsIPermissionManager*       mPermissionManager;   // STRONG (should be nsCOMPtr)
   nsCOMArray<nsIPermission>*  mCachedPermissions;   // parallel list for speed, STRONG
+  IBOutlet NSButton*          mRemoveAllPermissionsButton;
       
   // cookie sheet
   IBOutlet id                 mCookiesPanel;
   IBOutlet ExtendedTableView* mCookiesTable;
   IBOutlet NSButton*          mRemoveCookiesButton;
+  IBOutlet NSButton*          mRemoveAllCookiesButton;
   IBOutlet SearchTextField*   mCookiesFilterField;
   nsICookieManager*           mCookieManager;
   nsCOMArray<nsICookie>*      mCachedCookies;
